--- a/TEMPLATE/TEMPLATE/TEMPLATE.vcxproj
+++ b/TEMPLATE/TEMPLATE/TEMPLATE.vcxproj
@@ -71,8 +71,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>..\..\Resources\SDL\SDL2-2.0.12\include;..\..\Resources\SDL\SDL2_image-2.0.5\include;..\..\Resources\SDL\SDL2_mixer-2.0.4\include;..\..\Resources\SDL\SDL2_ttf-2.0.15\include;..\..\Resources\SDL\glew-2.1.0\include;..\..\Resources\SDL\rapidjson\include;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\Resources\SDL\SDL2-2.0.12\lib\x64;..\..\Resources\SDL\SDL2_image-2.0.5\lib\x64;..\..\Resources\SDL\SDL2_mixer-2.0.4\lib\x6;..\..\Resources\SDL\SDL2_ttf-2.0.15\lib\x64;..\..\Resources\SDL\glew-2.1.0\lib\Release\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\..\Resources\SDL\SDL2-2.0.12\include;..\..\Resources\SDL\SDL2_image-2.0.5\include;..\..\Resources\SDL\SDL2_mixer-2.0.4\include;..\..\Resources\SDL\SDL2_ttf-2.0.15\include;..\..\Resources\glew-2.1.0\include;..\..\Resources\rapidjson\include;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\Resources\SDL\SDL2-2.0.12\lib\x64;..\..\Resources\SDL\SDL2_image-2.0.5\lib\x64;..\..\Resources\SDL\SDL2_mixer-2.0.4\lib\x6;..\..\Resources\SDL\SDL2_ttf-2.0.15\lib\x64;..\..\Resources\glew-2.1.0\lib\Release\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
